# prism-vrec

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_question.md
.github/workflows/: ci.yml
configs/: default.yaml  evaluation.yaml  extractors.yaml  finetuning.yaml  fusion.yaml  recommenders.yaml
configs/smoke/: default.yaml  evaluation.yaml  extractors.yaml  finetuning.yaml  fusion.yaml  recommenders.yaml
data/: .gitignore
docs/: battery_runbook.md  extending.md  hp_search.md  learned_fusion.md  observability.md  protocol.md  protocol_v2.md  recipes.md
plugins/: __init__.py
plugins/datasets/: README.md
plugins/datasets/_example/: README.md  categories.csv  interactions.csv
plugins/extractors/: _example.py
plugins/fusions/: __init__.py  _example.py
plugins/recommenders/: _example.py
src/battery/: __init__.py  cells.py  execute.py  manifest.py  runner.py
src/data/: __init__.py  auto_register.py  base.py  categories.py  dvbpr.py  example_csv.py  preprocessing.py  synthetic.py
src/evaluation/: __init__.py  comparison_families.py  derive_metrics.py  metrics.py  paired_loader.py  persistence.py  protocol.py  statistical.py
src/extractors/: __init__.py  auto_register.py  base.py  clip.py  coatnet.py  convnext.py  cvt.py  dinov2.py  levit.py  registry.py  resnet.py  vit.py
src/finetuning/: __init__.py  checkpoint.py  dataset.py  evaluator.py  trainer.py
src/fusions/: __init__.py  auto_register.py  online.py  registry.py  strategies.py
src/recommenders/: __init__.py  _scoring.py  acf.py  acf_attention.py  auto_register.py  avbpr.py  base.py  bpr.py  deepstyle.py  hp_budget.py  hp_search.py  registry.py  vbpr.py  vnpr.py
src/reporting/: __init__.py  aggregate_seeds.py  consolidate.py  long_format.py
src/steps/: __init__.py  download.py  evaluate.py  evaluate_finetuning.py  export_best.py  extract.py  finetune.py  fuse.py  preprocess.py  statistical.py  train.py  validate_features.py
src/utils/: __init__.py  amp_compat.py  artifact_names.py  atomic_io.py  carbon.py  checkpoint.py  config.py  config_schema.py  dataloader.py  device.py  logging.py  manifest.py  parallel.py  plugin_scan.py  report.py  seed.py  timing.py  training.py
tests/: conftest.py  test_acf_extractor_components.py  test_adaptive_gated.py  test_atomic_io.py  test_base_recommender_components.py  test_battery.py  test_bpr_batch_sampler.py  test_canonical_transforms.py  test_categories_derivation.py  test_category_contract.py  test_comparison_families.py  test_config_schema.py  test_convnext_extractor.py  test_dataloader_autotune.py  test_deterministic_ranking.py  test_device_resolution.py  test_enumeration_routing.py  test_evaluate_acf_history.py  test_evaluate_per_user.py  test_evaluator_sampled.py  test_export_best.py  test_extractor_component_shape.py  test_extractor_registry.py  test_extractor_unfreeze.py  test_finetune_frozen_bn.py  test_finetuner_unfreeze.py  test_finetuning_checkpoint.py  test_finetuning_resume_rng.py  test_fuse_strategy_config.py  test_fusion_registry.py  test_fusion_strategies.py  test_hp_budget.py  test_hp_search.py  test_long_format.py  test_metrics.py  test_multi_seed.py  test_per_user_persistence.py  test_recommender_bpr_loss.py  test_recommender_registry.py  test_report.py  (+10 more)
tests/recommenders/: __init__.py  test_acf_attention.py  test_acf_model.py  test_acf_vectorized_eval.py  test_deepstyle_paper.py  test_legacy_models.py  test_vnpr_factorized_eval.py
