[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-vrec"
version = "2.2.2"
description = "A reproducible framework for evaluating visual feature extractors in recommender systems — pure architectures, CNN-Transformer hybrids, foundation models, and late-fusion strategies."
requires-python = ">=3.11,<3.13"
keywords = [
    "recommender-systems",
    "visual-recommendation",
    "feature-fusion",
    "cnn-transformer-hybrids",
    "foundation-models",
    "reproducible-research",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
# Upper bounds are intentional: they pin to the major release ranges that
# have been tested end-to-end with this code base.  Bumping them is a
# decision that should be made together with a re-validation of the
# pipeline (numerical equivalence, AMP behaviour, etc).
dependencies = [
    "torch>=2.1.0,<2.6",
    "torchvision>=0.16.0,<0.21",
    "timm>=0.9.12,<1.1",
    "numpy>=1.24.0,<2.0",
    "scikit-learn>=1.3.0,<1.6",
    "scipy>=1.11.0,<1.15",
    "pyyaml>=6.0,<7.0",
    "pandas>=2.1.0,<2.3",
    "tqdm>=4.66.0,<5.0",
    "Pillow>=10.0.0,<11.0",
    "matplotlib>=3.8.0,<3.10",
    "seaborn>=0.13.0,<0.14",
    "requests>=2.31.0,<3.0",
    "open_clip_torch>=2.24.0,<3.0",
    "transformers>=4.45,<4.50",
    "huggingface_hub>=0.24,<0.27",
    "pydantic>=2.5,<3.0",
    "optuna>=3.5,<4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "ruff>=0.5.0",
    "pre-commit>=3.5.0",
]
# Optional energy / CO2-equivalent tracking via codecarbon.  See
# src/utils/carbon.py — activation also requires PRISM_TRACK_CARBON=1.
carbon = [
    "codecarbon>=2.4,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "plugins*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
    "slow: instantiates a real backbone and downloads pretrained weights on first run",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "data",
    "checkpoints",
    "results",
    "logs",
    # Generated / vendored content under plugins/ should not be linted.
    "plugins/datasets/_example",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PERF",   # perflint
]
ignore = [
    "E501",   # line too long — many docstrings legitimately exceed 100
    "B008",   # function call in default argument — common torch/timm pattern
    "SIM108", # ternary if/else — sometimes a plain if is clearer
    "PERF401",# manual list comprehension — readability beats micro-perf in this codebase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]                 # asserts in tests are intentional
"plugins/*/_example.py" = ["F401"]   # examples may import for illustration

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
